# ParserSales

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: BotTelegram.h  Forecast.hpp  Interface.h  JsonReader.h  PostgresDB.h  PyLoader.h  TelegramSender.h  TelegramUser.h  good_function.hpp
load/: 1.cpp
res/: my_favourite_link.txt  test_BotTelegram.txt  test_JsonReader.txt  test_PostgresDB.txt  test_PyLoader.txt  test_TelegramSender.txt  test_TelegramUser.txt
src/: BotTelegram.cpp  Interface.cpp  JsonReader.cpp  PostgresDB.cpp  PyLoader.cpp  TelegramSender.cpp  TelegramUser.cpp  good_function.cpp  main.cpp
tests/: test_BotTelegram.cpp  test_JsonReader.cpp  test_PostgresDB.cpp  test_PyLoader.cpp  test_TelegramSender.cpp  test_TelegramUser.cpp
tests/test_PostgresDB/: CMakeLists.txt  test_PostgresDB.cpp  test_PostgresDB_1.cpp  test_PostgresDB_2.cpp
